_rendered/apps/demo-podinfo/cilium_io-ciliumnetworkpolicy-demo-podinfo-preset-cnp.yaml
# Source: demo-podinfo/charts/demo-podinfo/charts/networkpolicy/templates/networkpolicy-preset.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  
  name: demo-podinfo-preset-cnp
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
    - fromEndpoints:
        - matchLabels:
            custom.network/external-ingress: "egress"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
  egress:
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
